--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
     <div class="flash  {{cat}}">{{msg}}</div>
 {% endfor %}
 
-<form action="/login" method="post" class="form-contact">
+<form action="" method="post" class="form-contact">
     <p>
         <label>Email:</label>
         <input type="text" name="email" value="" required>
