--- a/templates/login.html
+++ b/templates/login.html
@@ -8,20 +8,39 @@
 {% endfor %}
 
 <form action="" method="post" class="form-contact">
-    <p>
-        <label>Email:</label>
-        <input type="text" name="email" value="" required>
+    {{form.hidden_tag()}}
+    {% for field in form if field.name not in ['csrf_token', 'remember', 'submit'] %}
+    <p>{{field.label()}}
+        {% if field.errors%}
+            {{field(class_="invalid")}}
+        <span class="invalid-feedback">
+            {% for e in field.errors %}
+                {{ e }}
+            {% endfor %}
+        </span>
+        {% else %}
+            {{field()}}
+        {% endif %}
     </p>
-     <p>
-        <label>Пароль:</label>
-        <input type="password" name="psw" value="" required>
-    </p>
-     <p>
-         <input type="checkbox" name="remainme"> Запомнить меня
-     </p>
-    <p><input type="submit" value="Войти"></p>
-        <hr align=left width="300px">
-    <p><a href="{{url_for('register')}}">Регистрация</a></p>
+    {% endfor %}
+    <p>{{form.remember.label()}}{{form.remember()}}</p>
+   <p>{{form.submit()}}</p>
+   <hr align=left width="300px">
+   <p><a href="{{url_for('register')}}">Регистрация</a></p>
 </form>
 {% endblock %}
 
+ <p>-->
+<!--        <label>Email:</label>-->
+<!--        <input type="text" name="email" value="" required>-->
+<!--    </p>-->
+<!--     <p>-->
+<!--        <label>Пароль:</label>-->
+<!--        <input type="password" name="psw" value="" required>-->
+<!--    </p>-->
+<!--     <p>-->
+<!--         <input type="checkbox" name="remainme"> Запомнить меня-->
+<!--     </p>-->
+<!--    <p><input type="submit" value="Войти"></p>-->
+<!--        <hr align=left width="300px">-->
+<!--    <p><a href="{{url_for('register')}}">Регистрация</a></p>
