--- a/templates/register.html
+++ b/templates/register.html
@@ -9,24 +9,43 @@
 {% endfor %}
 
 <form action="/register" method="post" class="form-contact">
-    <p>
-        <label>Имя: </label>
-        <input type="text" name="name" value="" required>
+    {{form.hidden_tag()}}
+    {% for field in form if field.name not in ['csrf_token', 'submit'] %}
+    <p>{{field.label()}}
+        {% if field.errors%}
+            {{field(class_="invalid")}}
+        <span class="invalid-feedback">
+            {% for e in field.errors %}
+                {{ e }}
+            {% endfor %}
+        </span>
+        {% else %}
+            {{field()}}
+        {% endif %}
     </p>
-    <p>
-        <label>Email: </label>
-        <input type="text" name="email" value="" required>
-    </p>
-     <p>
-        <label>Пароль:</label>
-        <input type="password" name="psw" value="" required>
-    </p>
-     <p>
-        <label>Повтор пароля:</label>
-        <input type="password" name="psw2" value="" required>
-    </p>
-    <p><input type="submit" value="Регистрация"></p>
-        <hr align=left width="300px">
+    {% endfor %}
+   <p>{{form.submit()}}</p>
+    <hr align=left width="300px">
     <p><a href="{{url_for('login')}}">Уже есть аккаунт? Войти</a></p>
 </form>
 {% endblock %}
+
+<!--<p>-->
+<!--        <label>Имя: </label>-->
+<!--        <input type="text" name="name" value="" required>-->
+<!--    </p>-->
+<!--    <p>-->
+<!--        <label>Email: </label>-->
+<!--        <input type="text" name="email" value="" required>-->
+<!--    </p>-->
+<!--     <p>-->
+<!--        <label>Пароль:</label>-->
+<!--        <input type="password" name="psw" value="" required>-->
+<!--    </p>-->
+<!--     <p>-->
+<!--        <label>Повтор пароля:</label>-->
+<!--        <input type="password" name="psw2" value="" required>-->
+<!--    </p>-->
+<!--    <p><input type="submit" value="Регистрация"></p>-->
+<!--        <hr align=left width="300px">-->
+<!--    <p><a href="{{url_for('login')}}">Уже есть аккаунт? Войти</a></p>-->
